# fer-computer-animation-labs

./: .gitignore  CMakeLists.txt  README.md
gameoflife/Game_of_Life/: sketch.js
gameoflife/Game_of_Particles/: sketch.js
particle/: index.html
particle/particle/web-export/: index.html  particle.js
trajectory/: CMakeLists.txt
trajectory/sources/: Material.cpp  main.cpp
